리스트 업데이트

--- a/pub_list.html
+++ b/pub_list.html
@@ -84,7 +84,7 @@
         <li>
             <a href="./pub/pr_center_detail.html" target="_blank">
                 <p>홍보센터 - 전시회참가 상세페이지</p>
-                <span></span>
+                <span>pr_center_detail.html</span>
                 <span></span>
             </a>
         </li>
@@ -105,7 +105,7 @@
         <li>
             <a href="./pub/news_detail.html" target="_blank">
                 <p>홍보센터 - 뉴스 상세페이지</p>
-                <span></span>
+                <span>news_detail.html</span>
                 <span></span>
             </a>
         </li> 
