fix: 제품소개 스와이프 오류 수정 중 > 메인 풀

--- a/pub/product_intro.html
+++ b/pub/product_intro.html
@@ -240,21 +240,24 @@
                     </form>
                 </div>
             </section>
-            <!-- 탭별 컨텐츠 -->
-            <main class="product_tab_panels">
-                <div class="product_tab_result">
-                    <strong>워터펌프</strong>
-                    <p class="result_text">
-                        실린더 블록 물 재킷 부위에 볼트로 체결되며, 벨트 또는 기어에 의해 크랭크축의 구동력을 전달받아<br>
-                        냉각수를 순환시켜 엔진에서 발생하는 열을 감소시키는 제품입니다.
-                    </p>
-                </div>
-                <section id="tab-waterpump" class="product_tab_panel is-active">
-                    <!-- 워터펌프 탭 -->
-                    <!-- 제품 메인 슬라이더 + 썸네일 묶음 -->
-                    <section class="product_main_area">
-                        <div class="product_main_inner">
-                            <!-- 메인 카드 스와이퍼 -->
+
+        </div>
+        <!-- 탭별 컨텐츠 -->
+        <main class="product_tab_panels">
+            <div class="product_tab_result">
+                <strong>워터펌프</strong>
+                <p class="result_text">
+                    실린더 블록 물 재킷 부위에 볼트로 체결되며, 벨트 또는 기어에 의해 크랭크축의 구동력을 전달받아<br>
+                    냉각수를 순환시켜 엔진에서 발생하는 열을 감소시키는 제품입니다.
+                </p>
+            </div>
+            <section id="tab-waterpump" class="product_tab_panel is-active">
+                <!-- 워터펌프 탭 -->
+                <!-- 제품 메인 슬라이더 + 썸네일 묶음 -->
+                <section class="product_main_area">
+                    <div class="product_main_inner">
+                        <!-- 메인 카드 스와이퍼 -->
+                        <div class="interval_wrap">
                             <div class="swiper product_main_swiper">
                                 <div class="swiper-wrapper">
 
@@ -267,7 +270,8 @@
                                             </div>
                                             <div class="product_card_info">
                                                 <p class="product_card_category_title">워터펌프</p>
-                                                <h3 class="product_card_title">Auto Water Pump For HYUNDAI/KIA</h3>
+                                                <h3 class="product_card_title">Auto Water Pump For
+                                                    HYUNDAI/KIA</h3>
                                                 <p class="product_card_oem">OEM : 2151023001</p>
 
                                                 <dl class="product_card_spec_list">
@@ -305,7 +309,8 @@
                                             </div>
                                             <div class="product_card_info">
                                                 <p class="product_card_category_title">워터펌프</p>
-                                                <h3 class="product_card_title">Auto Water Pump For KIA SUV</h3>
+                                                <h3 class="product_card_title">Auto Water Pump For
+                                                    KIA SUV</h3>
                                                 <p class="product_card_oem">OEM : 2151023002</p>
 
                                                 <dl class="product_card_spec_list">
@@ -343,7 +348,8 @@
                                             </div>
                                             <div class="product_card_info">
                                                 <p class="product_card_category_title">워터펌프</p>
-                                                <h3 class="product_card_title">Auto Water Pump Premium Line</h3>
+                                                <h3 class="product_card_title">Auto Water Pump
+                                                    Premium Line</h3>
                                                 <p class="product_card_oem">OEM : 2151023003</p>
 
                                                 <dl class="product_card_spec_list">
@@ -380,7 +386,8 @@
                                             </div>
                                             <div class="product_card_info">
                                                 <p class="product_card_category_title">워터펌프</p>
-                                                <h3 class="product_card_title">Auto Water Pump Premium Line</h3>
+                                                <h3 class="product_card_title">Auto Water Pump
+                                                    Premium Line</h3>
                                                 <p class="product_card_oem">OEM : 2151023003</p>
 
                                                 <dl class="product_card_spec_list">
@@ -417,7 +424,8 @@
                                             </div>
                                             <div class="product_card_info">
                                                 <p class="product_card_category_title">워터펌프</p>
-                                                <h3 class="product_card_title">Auto Water Pump Premium Line</h3>
+                                                <h3 class="product_card_title">Auto Water Pump
+                                                    Premium Line</h3>
                                                 <p class="product_card_oem">OEM : 2151023003</p>
 
                                                 <dl class="product_card_spec_list">
@@ -454,7 +462,8 @@
                                             </div>
                                             <div class="product_card_info">
                                                 <p class="product_card_category_title">워터펌프</p>
-                                                <h3 class="product_card_title">Auto Water Pump Premium Line</h3>
+                                                <h3 class="product_card_title">Auto Water Pump
+                                                    Premium Line</h3>
                                                 <p class="product_card_oem">OEM : 2151023003</p>
 
                                                 <dl class="product_card_spec_list">
@@ -491,7 +500,8 @@
                                             </div>
                                             <div class="product_card_info">
                                                 <p class="product_card_category_title">워터펌프</p>
-                                                <h3 class="product_card_title">Auto Water Pump Premium Line</h3>
+                                                <h3 class="product_card_title">Auto Water Pump
+                                                    Premium Line</h3>
                                                 <p class="product_card_oem">OEM : 2151023003</p>
 
                                                 <dl class="product_card_spec_list">
@@ -528,7 +538,8 @@
                                             </div>
                                             <div class="product_card_info">
                                                 <p class="product_card_category_title">워터펌프</p>
-                                                <h3 class="product_card_title">Auto Water Pump Premium Line</h3>
+                                                <h3 class="product_card_title">Auto Water Pump
+                                                    Premium Line</h3>
                                                 <p class="product_card_oem">OEM : 2151023003</p>
 
                                                 <dl class="product_card_spec_list">
@@ -563,8 +574,10 @@
                                 <div class="swiper-button-prev product_main_prev"></div>
                                 <div class="swiper-button-next product_main_next"></div>
                             </div>
+                        </div>
 
-                            <!-- 하단 썸네일 스와이퍼 -->
+                        <!-- 하단 썸네일 스와이퍼 -->
+                        <div class="interval_wrap sub">
                             <div class="swiper product_thumb_swiper">
                                 <div class="swiper-wrapper">
 
@@ -650,28 +663,28 @@
 
                                 </div>
                             </div>
-
                         </div>
-                    </section>
-                </section>
 
-                <section id="tab-oilpump" class="product_tab_panel">
-                    <!-- 오일펌프 탭 -->
+                    </div>
                 </section>
+            </section>
 
-                <section id="tab-thermostat" class="product_tab_panel">
-                    <!-- 써모스탯 탭 -->
-                </section>
+            <section id="tab-oilpump" class="product_tab_panel">
+                <!-- 오일펌프 탭 -->
+            </section>
 
-                <section id="tab-tensioner" class="product_tab_panel">
-                    <!-- 텐셔너 탭 -->
-                </section>
+            <section id="tab-thermostat" class="product_tab_panel">
+                <!-- 써모스탯 탭 -->
+            </section>
 
-                <section id="tab-idler" class="product_tab_panel">
-                    <!-- 아이들러 탭 -->
-                </section>
-            </main>
-        </div>
+            <section id="tab-tensioner" class="product_tab_panel">
+                <!-- 텐셔너 탭 -->
+            </section>
+
+            <section id="tab-idler" class="product_tab_panel">
+                <!-- 아이들러 탭 -->
+            </section>
+        </main>
     </div>
 
     <!--   푸터   -->
