fix: 제품소개 완료

--- a/pub/product_intro.html
+++ b/pub/product_intro.html
@@ -244,12 +244,13 @@
         </div>
         <!-- 탭별 컨텐츠 -->
         <main class="product_tab_panels">
-            <div class="product_tab_result">
-                <strong>워터펌프</strong>
-                <p class="result_text">
-                    실린더 블록 물 재킷 부위에 볼트로 체결되며, 벨트 또는 기어에 의해 크랭크축의 구동력을 전달받아<br>
-                    냉각수를 순환시켜 엔진에서 발생하는 열을 감소시키는 제품입니다.
-                </p>
+            <div class="result_wrap">
+                <div class="product_tab_result">
+                    <strong>워터펌프</strong>
+                    <p class="result_text">
+                        실린더 블록 물 재킷 부위에 볼트로 체결되며, 벨트 또는 기어에 의해 크랭크축의 구동력을 전달받아 냉각수를 순환시켜 엔진에서 발생하는 열을 감소시키는 제품입니다.
+                    </p>
+                </div>
             </div>
             <section id="tab-waterpump" class="product_tab_panel is-active">
                 <!-- 워터펌프 탭 -->
@@ -578,7 +579,7 @@
 
                         <!-- 하단 썸네일 스와이퍼 -->
                         <div class="interval_wrap sub">
-                            <div class="swiper product_thumb_swiper">
+                            <div class="product_thumb_swiper">
                                 <div class="swiper-wrapper">
 
                                     <!-- 1번 제품 썸네일 -->
@@ -587,7 +588,7 @@
                                                 <span class="product_thumb_img">
                                                   <img src="./images/product/product_waterpump.png" alt="Auto Water Pump 썸네일 1">
                                                 </span>
-                                            <span class="product_thumb_name">Auto Water Pump Auto<br>Water Pump AutoAutoAutoAutoAutoAutoAutoAuto</span>
+                                            <span class="product_thumb_name">Auto Water Pump Auto Water Pump AutoAutoAutoAutoAutoAutoAutoAuto</span>
                                         </button>
                                     </div>
 
@@ -597,7 +598,7 @@
                                                 <span class="product_thumb_img">
                                                   <img src="./images/product/product_waterpump.png" alt="Auto Water Pump 썸네일 2">
                                                 </span>
-                                            <span class="product_thumb_name">Auto Water Pump KIA<br>Water Pump Auto</span>
+                                            <span class="product_thumb_name">Auto Water Pump KIA Water Pump Auto</span>
                                         </button>
                                     </div>
 
@@ -607,7 +608,7 @@
                                                 <span class="product_thumb_img">
                                                   <img src="./images/product/product_waterpump.png" alt="Auto Water Pump 썸네일 3">
                                                 </span>
-                                            <span class="product_thumb_name">Auto Water Pump Premium<br>Water Pump Auto</span>
+                                            <span class="product_thumb_name">Auto Water Pump Premium Water Pump Auto</span>
                                         </button>
                                     </div>
 
@@ -617,7 +618,7 @@
                                                 <span class="product_thumb_img">
                                                   <img src="./images/product/product_waterpump.png" alt="Auto Water Pump 썸네일 4">
                                                 </span>
-                                            <span class="product_thumb_name">Auto Water Pump Premium<br>Water Pump Auto</span>
+                                            <span class="product_thumb_name">Auto Water Pump Premium Water Pump Auto</span>
                                         </button>
                                     </div>
 
@@ -627,7 +628,7 @@
                                                 <span class="product_thumb_img">
                                                   <img src="./images/product/product_waterpump.png" alt="Auto Water Pump 썸네일 5">
                                                 </span>
-                                            <span class="product_thumb_name">Auto Water Pump Premium<br>Water Pump Auto</span>
+                                            <span class="product_thumb_name">Auto Water Pump Premium Water Pump Auto</span>
                                         </button>
                                     </div>
 
@@ -637,7 +638,7 @@
                                                 <span class="product_thumb_img">
                                                   <img src="./images/product/product_waterpump.png" alt="Auto Water Pump 썸네일 6">
                                                 </span>
-                                            <span class="product_thumb_name">Auto Water Pump Premium<br>Water Pump Auto</span>
+                                            <span class="product_thumb_name">Auto Water Pump Premium Water Pump Auto</span>
                                         </button>
                                     </div>
 
@@ -647,7 +648,7 @@
                                                 <span class="product_thumb_img">
                                                   <img src="./images/product/product_waterpump.png" alt="Auto Water Pump 썸네일 7">
                                                 </span>
-                                            <span class="product_thumb_name">Auto Water Pump Premium<br>Water Pump Auto</span>
+                                            <span class="product_thumb_name">Auto Water Pump Premium Water Pump Auto</span>
                                         </button>
                                     </div>
 
@@ -657,7 +658,7 @@
                                                 <span class="product_thumb_img">
                                                   <img src="./images/product/product_waterpump.png" alt="Auto Water Pump 썸네일 8">
                                                 </span>
-                                            <span class="product_thumb_name">Auto Water Pump Premium<br>Water Pump Auto</span>
+                                            <span class="product_thumb_name">Auto Water Pump Premium Water Pump Auto</span>
                                         </button>
                                     </div>
 
