feat: 홍보센터 - 전시회 세팅

--- a/pub_list.html
+++ b/pub_list.html
@@ -75,9 +75,9 @@
             </a>
         </li> 
         <li>
-            <a href="#none" target="_blank">
+            <a href="./pub/pr_center_exhibition.html" target="_blank">
                 <p>홍보센터 - 전시회참가</p>
-                <span></span>
+                <span>pr_center_exhibition.html</span>
                 <span></span>
             </a>
         </li> 
