수정 및 css 정리

--- a/pub/product_intro.html
+++ b/pub/product_intro.html
@@ -187,11 +187,11 @@
                 <!--  메뉴박스  -->
                 <div class="content_tab_box">
                     <!--  홈메뉴 & 현재 페이지 네임  -->
-                    <div class="menu_guide_left_box">
+                    <div class="breadcrumb">
                         <a href="javascript:void(0);" class="guide_home_link">
                             <i class="guide_home"></i>
                         </a>
-                        <span class="menu_guide_left_text">제품소개</span>
+                        <span class="breadcrumb_current">제품소개</span>
                     </div>
                     <div class="inner_tab">
                         <!-- 제품 카테고리 탭 (워터펌프 / 오일펌프 …) -->
