--- a/pub/customer.html
+++ b/pub/customer.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>뉴오토정밀 - 홍보센터</title>
+    <title>뉴오토정밀 - 고객지원</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/pr_center.css">
+    <link rel="stylesheet" href="./css/customer.css">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <script src="./js/jquery.3.1.1.js"></script>
     <script src="./js/ui.js"></script>
 </head>
 <body>
-<div class="wrap pr_center">
+<div class="wrap">
     <!--   헤더   -->
     <header>
         <div class="header_area">
@@ -176,81 +176,65 @@
     </header>
 
     <!--  컨텐츠  -->
-    <div class="contents pr_wrap">
+    <div class="contents customer_wrap">
         <div class="inner">
             <!--  백그라운드 비주얼  -->
             <section class="inner_visual">
-                <h2 class="visual_tit">홍보센터</h2>
+                <h2 class="visual_tit">고객지원</h2>
             </section>
             <section class="inner_content">
-                <!--  메뉴박스  -->
+                <!--  메뉴박스  -->breadcrumb
                 <div class="content_tab_box">
                     <!--  홈메뉴 & 현재 페이지 네임  -->
                     <div class="breadcrumb">
                         <a href="javascript:void(0);" class="guide_home_link">
                             <i class="guide_home"></i>
                         </a>
-                        <span class="breadcrumb_current">홍보센터</span>
+                        <span class="breadcrumb_current">고객지원</span>
                     </div>
                     <div class="inner_tab">
                         <!-- 홍보센터 탭 리스트 -->
                         <ul class="inner_tab_list" role="tablist">
                             <li class="inner_tab_item is-active">
-                                <button type="button" class="inner_tab_btn"
-                                        id="tab-btn-exhibition"
-                                        data-target="panel-exhibition"
-                                        role="tab"
-                                        aria-selected="true">
-                                    <span>전시회 참가</span>
+                                <button type="button" class="inner_tab_btn" id="tab-btn-inquiry" data-target="panel-inquiry" role="tab" aria-selected="true">
+                                    <span>INQUIRY</span>
                                 </button>
                             </li>
                             <li class="inner_tab_item">
-                                <button type="button" class="inner_tab_btn"
-                                        id="tab-btn-catalog"
-                                        data-target="panel-catalog"
-                                        role="tab"
-                                        aria-selected="false">
-                                    <span>카탈로그</span>
+                                <button type="button" class="inner_tab_btn" id="tab-btn-notice" data-target="panel-notice" role="tab" aria-selected="false">
+                                    <span>공지사항</span>
                                 </button>
                             </li>
                             <li class="inner_tab_item">
-                                <button type="button" class="inner_tab_btn"
-                                        id="tab-btn-news"
-                                        data-target="panel-news"
-                                        role="tab"
-                                        aria-selected="false">
-                                    <span>뉴스</span>
+                                <button type="button" class="inner_tab_btn" id="tab-btn-clients" data-target="panel-clients" role="tab" aria-selected="false">
+                                    <span>주요 고객사</span>
                                 </button>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <div class="content_search_box">
-                    <form class="inner_search_form" action="" method="get">
-                        <label for="innerKeyword" class="blind">검색</label>
-                        <input id="innerKeyword" name="keyword" type="text"
-                               class="inner_search_input" placeholder="검색어를 입력해 주세요.">
-                        <button type="submit" class="inner_search_btn">검색</button>
-                    </form>
-                </div>
             </section>
 
             <!-- 메인 콘텐츠: 탭 패널 묶음 -->
-            <main class="pr_tab_panels">
+            <main class="customer_tab_panels_wrap">
 
-                <!-- 전시회 참가 패널 -->
-                <section id="panel-exhibition" class="inner_tab_panel is-active">
-
+                <!-- INQUIRY -->
+                <section id="panel-inquiry" class="inner_tab_panel is-active" role="tabpanel" aria-labelledby="tab-btn-inquiry">
+                    1
                 </section>
+                <!-- //INQUIRY -->
 
-                <!-- 카탈로그 패널 -->
-                <section id="panel-catalog" class="inner_tab_panel">
+                <!-- 공지사항 -->
+                <section id="panel-notice" class="inner_tab_panel" role="tabpanel" aria-labelledby="tab-btn-notice">
+                    2
                 </section>
+                <!-- //공지사항 -->
 
-                <!-- 뉴스 패널 -->
-                <section id="panel-news" class="inner_tab_panel">
+                <!-- 주요 고객사 -->
+                <section id="panel-clients" class="inner_tab_panel" role="tabpanel" aria-labelledby="tab-btn-clients">
+                    3
                 </section>
-
+                <!-- //주요 고객사 -->
             </main>
 
         </div>
