--- a/pub/rnd_intro.html
+++ b/pub/rnd_intro.html
@@ -187,11 +187,11 @@
                 <!--  메뉴박스  -->
                 <div class="content_tab_box">
                     <!--  홈메뉴 & 현재 페이지 네임  -->
-                    <div class="menu_guide_left_box">
+                    <div class="breadcrumb">
                         <a href="javascript:void(0);" class="guide_home_link">
                             <i class="guide_home"></i>
                         </a>
-                        <span class="menu_guide_left_text">연구개발</span>
+                        <span class="breadcrumb_current">연구개발</span>
                     </div>
                 </div>
                 <div class="content_search_box">
