--- a/pub/customer.html
+++ b/pub/customer.html
@@ -183,7 +183,7 @@
                 <h2 class="visual_tit">고객지원</h2>
             </section>
             <section class="inner_content">
-                <!--  메뉴박스  -->breadcrumb
+                <!--  메뉴박스  -->
                 <div class="content_tab_box">
                     <!--  홈메뉴 & 현재 페이지 네임  -->
                     <div class="breadcrumb">
@@ -220,7 +220,7 @@
 
                 <!-- INQUIRY -->
                 <section id="panel-inquiry" class="inner_tab_panel is-active" role="tabpanel" aria-labelledby="tab-btn-inquiry">
-                    1
+                    
                 </section>
                 <!-- //INQUIRY -->
 
