클래스 전체변경

--- a/pub/product_intro.html
+++ b/pub/product_intro.html
@@ -179,7 +179,7 @@
     <!--  컨텐츠  -->
     <div class="contents products_wrap">
         <!--  백그라운드 비주얼  -->
-        <section class="inner_visual">
+        <section class="visual_box">
             <div class="visual_inner">
                 <h2 class="visual_tit">제품소개</h2>
             </div>
