--- a/pub/rnd_intro.html
+++ b/pub/rnd_intro.html
@@ -180,7 +180,7 @@
     <div class="contents products_wrap">
         <div class="inner">
             <!--  백그라운드 비주얼  -->
-            <section class="inner_visual">
+            <section class="visual_box">
                 <h2 class="visual_tit">연구개발</h2>
             </section>
             <section class="inner_content">
