--- a/pub/customer.html
+++ b/pub/customer.html
@@ -177,67 +177,129 @@
 
     <!--  컨텐츠  -->
     <div class="contents customer_wrap">
-        <div class="inner">
-            <!--  백그라운드 비주얼  -->
-            <section class="inner_visual">
+        <section class="visual_box">
+            <div class="visual_inner">
                 <h2 class="visual_tit">고객지원</h2>
-            </section>
-            <section class="inner_content">
-                <!--  메뉴박스  -->
-                <div class="content_tab_box">
-                    <!--  홈메뉴 & 현재 페이지 네임  -->
-                    <div class="breadcrumb">
-                        <a href="javascript:void(0);" class="guide_home_link">
-                            <i class="guide_home"></i>
-                        </a>
-                        <span class="breadcrumb_current">고객지원</span>
+
+            </div>
+        </section>
+        <section class="inner_content">
+            <!--  메뉴박스  -->
+            <div class="content_tab_box">
+                <!--  홈메뉴 & 현재 페이지 네임  -->
+                <div class="breadcrumb">
+                    <a href="javascript:void(0);" class="guide_home_link">
+                        <i class="guide_home"></i>
+                    </a>
+                    <span class="breadcrumb_current">고객지원</span>
+                </div>
+                <div class="inner_tab">
+                    <!-- 홍보센터 탭 리스트 -->
+                    <ul class="inner_tab_list" role="tablist">
+                        <li class="inner_tab_item is-active">
+                            <button type="button" class="inner_tab_btn" id="tab-btn-inquiry" data-target="panel-inquiry" role="tab" aria-selected="true">
+                                <span>INQUIRY</span>
+                            </button>
+                        </li>
+                        <li class="inner_tab_item">
+                            <button type="button" class="inner_tab_btn" id="tab-btn-notice" data-target="panel-notice" role="tab" aria-selected="false">
+                                <span>공지사항</span>
+                            </button>
+                        </li>
+                        <li class="inner_tab_item">
+                            <button type="button" class="inner_tab_btn" id="tab-btn-clients" data-target="panel-clients" role="tab" aria-selected="false">
+                                <span>주요 고객사</span>
+                            </button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <main class="customer_tab_panels_wrap">
+            <!-- INQUIRY -->
+            <section id="panel-inquiry" class="inner_tab_panel is-active" role="tabpanel" aria-labelledby="tab-btn-inquiry">
+                <div class="map_area" style="border:1px solid red">
+                    맵영역
+                </div>
+                <div>
+                    <div>
+                        <h3>뉴오토정밀(주)</h3>
+                        경기도 화성시 안녕남로 97-21
+                        031-224-6771
+                        newauto@newautokorea.com
                     </div>
-                    <div class="inner_tab">
-                        <!-- 홍보센터 탭 리스트 -->
-                        <ul class="inner_tab_list" role="tablist">
-                            <li class="inner_tab_item is-active">
-                                <button type="button" class="inner_tab_btn" id="tab-btn-inquiry" data-target="panel-inquiry" role="tab" aria-selected="true">
-                                    <span>INQUIRY</span>
-                                </button>
-                            </li>
-                            <li class="inner_tab_item">
-                                <button type="button" class="inner_tab_btn" id="tab-btn-notice" data-target="panel-notice" role="tab" aria-selected="false">
-                                    <span>공지사항</span>
-                                </button>
-                            </li>
-                            <li class="inner_tab_item">
-                                <button type="button" class="inner_tab_btn" id="tab-btn-clients" data-target="panel-clients" role="tab" aria-selected="false">
-                                    <span>주요 고객사</span>
-                                </button>
-                            </li>
-                        </ul>
+                    <div>
+                        <p>뉴오토정밀의 제품에 대한 자세한 상담을 원하신다면 아래의 정보를 입력하여 주시기 바랍니다. </p>
+                        <p>담당자가 확인 후 빠르게 회신드리겠습니다.</p>
+                        <div>
+                            <ul>
+                                <li> 
+                                    <label for=""><span>회사명</span></label>
+                                    <div class="ipt">
+                                        <input type="text" id="" placeholder="회사명을 입력해 주세요.">
+                                    </div>
+                                </li>
+                                <li> 
+                                    <label for=""><span>부서명</span></label>
+                                    <div class="ipt">
+                                        <input type="text" id="" placeholder="회사명을 입력해 주세요.">
+                                    </div>
+                                </li>
+                                <li> 
+                                    <label for=""><span>이름</span></label>
+                                    <div class="ipt">
+                                        <input type="text" id="" placeholder="회사명을 입력해 주세요.">
+                                    </div>
+                                </li>
+                                <li> 
+                                    <label for=""><span>직급</span></label>
+                                    <div class="ipt">
+                                        <input type="text" id="" placeholder="회사명을 입력해 주세요.">
+                                    </div>
+                                </li>
+                                <li> 
+                                    <label for=""><span>휴대폰</span></label>
+                                    <div class="ipt">
+                                        <input type="text" id="" placeholder="회사명을 입력해 주세요.">
+                                    </div>
+                                </li>
+                                <li> 
+                                    <label for=""><span>이메일</span></label>
+                                    <div class="ipt">
+                                        <input type="text" id="" placeholder="회사명을 입력해 주세요.">
+                                    </div>
+                                </li>
+                                <li> 
+                                    <label for=""><span>제품</span></label>
+                                    <div class="ipt">
+                                        <input type="text" id="" placeholder="회사명을 입력해 주세요.">
+                                    </div>
+                                </li>
+                                <li> 
+                                    <label for=""><span>문의사항</span></label>
+                                    <div class="text_area">
+                                        <textarea name="" id="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium exercitationem laudantium dicta velit recusandae rerum laboriosam doloribus labore sed voluptatum? Perferendis, accusamus incidunt. Doloremque repellat ratione optio commodi provident enim.</textarea>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </section>
+            <!-- //INQUIRY -->
 
-            <!-- 메인 콘텐츠: 탭 패널 묶음 -->
-            <main class="customer_tab_panels_wrap">
+            <!-- 공지사항 -->
+            <section id="panel-notice" class="inner_tab_panel" role="tabpanel" aria-labelledby="tab-btn-notice">
+                2
+            </section>
+            <!-- //공지사항 -->
 
-                <!-- INQUIRY -->
-                <section id="panel-inquiry" class="inner_tab_panel is-active" role="tabpanel" aria-labelledby="tab-btn-inquiry">
-                    
-                </section>
-                <!-- //INQUIRY -->
-
-                <!-- 공지사항 -->
-                <section id="panel-notice" class="inner_tab_panel" role="tabpanel" aria-labelledby="tab-btn-notice">
-                    2
-                </section>
-                <!-- //공지사항 -->
-
-                <!-- 주요 고객사 -->
-                <section id="panel-clients" class="inner_tab_panel" role="tabpanel" aria-labelledby="tab-btn-clients">
-                    3
-                </section>
-                <!-- //주요 고객사 -->
-            </main>
-
-        </div>
+            <!-- 주요 고객사 -->
+            <section id="panel-clients" class="inner_tab_panel" role="tabpanel" aria-labelledby="tab-btn-clients">
+                3
+            </section>
+            <!-- //주요 고객사 -->
+        </main>
     </div>
 
     <!--   푸터   -->
