--- a/pub/pr_center.html
+++ b/pub/pr_center.html
@@ -178,7 +178,7 @@
     <!--  컨텐츠  -->
     <div class="contents pr_wrap">
         <!--  백그라운드 비주얼  -->
-        <section class="inner_visual">
+        <section class="visual_box">
             <div class="visual_inner">
                 <h2 class="visual_tit">제품소개</h2>
             </div>
