--- a/pub/pr_center.html
+++ b/pub/pr_center.html
@@ -180,14 +180,14 @@
         <!--  백그라운드 비주얼  -->
         <section class="inner_visual">
             <div class="visual_inner">
-                <h2 class="visual_tit">제품소개</h2>
+                <h2 class="visual_tit">홍보센터</h2>
             </div>
         </section>
         <section class="inner_content">
             <div class="section_inner">
                 <!--  메뉴박스  -->
                 <div class="content_tab_box">
-                    <!--  홈메뉴 & 현재 페이지 네임  -->
+                    <!--  브레드크럼  -->
                     <div class="breadcrumb">
                         <a href="javascript:void(0);" class="guide_home_link">
                             <i class="guide_home"></i>
@@ -238,9 +238,7 @@
                 </div>
             </div>
         </section>
-
-        <!-- 메인 콘텐츠: 탭 패널 묶음 -->
-        <main class="pr_tab_panels">
+        <main class="pr_list_panels">
             <!-- 전시회 참가 패널 -->
             <section id="panel-exhibition" class="inner_tab_panel is-active">
                 <div class="pr_list_section js-more-wrap" data-more-step="5">
